Version 1.2.2
-------------
New Applications
- Internet : Google Talk, Maxthon, Opera, Skype

Bug Fixes
- Installer filenames which do not contain any version information are now 
  redownloaded (if more than a day since the last download) since we have no way
  to know if the file has changed.
- Fixed Adobe Reader scraping and download link.

Version 1.2.1
-------------
New Applications
- Internet : TightVNC
- Fun and Games : BZFlag, Celestia, Stellarium, TuxPaint, TuxPaint Stamps
- Development : MySQL
- Productivity : Blender3D, DeepBurner Free, Dia, Gimp
- Utilities : Ant Renamer, KeePass
- Libraries : GTK+
- Entertainment : Juice Receiver

Internal Improvements
- Added support for zipped installers. AppSnap now extracts the ZIP and then 
  executes the installer.
- All background actions are now performed in a separate thread to prevent the 
  AppSnap GUI from locking up.

Bug Fixes
- SourceForge just rolled out new changes which broke all applications hosted
  with them. All impacted application scrape and download URLs updated.
- Fixed bug where AppSnap GUI was crashing in Windows 2000 since the install
  icon was not available in shell32.dll. Issue was not seen on XP and 2003 which
  had added a whole bunch of new icons.
- Fixed a bug where URLs with ?, & or = were returning 404 errors by PyCURL.
- Fixed bug of failed downloads being returned as successful in the GUI.
- Fixed Paint.NET and Picasa version scraping.

Version 1.2
-----------
New Applications
- Entertainment : iTunes
- Internet : uTorrent, Google WebAccelerator, Xming
- Productivity: AbiWord, Google Desktop, Paint.NET, PDFCreator, Picasa
- Utilities : Command Prompt Here, Stickies
- Development : ActivePerl, InnoSetup, NSIS, Python, PyCurl, PyYAML, wxPython,
                XAMPP

GUI Enhancements
- Checked applications are now unchecked as they are successfully installed or
  uninstalled. If the install/uninstall fails for any reason, the application
  will remain checked.
